--- a/index.html
+++ b/index.html
@@ -11,46 +11,139 @@
   --text:#eaf0ff; --muted:#9aa7c2; --accent:#38bdf8; --danger:#fb7185;
 }
 *{box-sizing:border-box}
-body{margin:0; background:linear-gradient(180deg,#0b1020,#05070d); font-family:Pretendard,"Noto Sans KR",system-ui; color:var(--text)}
+body{
+  margin:0;
+  background:linear-gradient(180deg,#0b1020,#05070d);
+  font-family:Pretendard,"Noto Sans KR",system-ui;
+  color:var(--text)
+}
 .wrapper{max-width:1200px; margin:auto; padding:32px 16px 80px}
+
 header{margin-bottom:32px; border-bottom:1px solid var(--line); padding-bottom:24px}
 header h1{margin:0; font-size:28px}
 header p{margin:8px 0 0; color:var(--muted); font-size:14px}
+
 .search-box{
-  background:var(--card); border:1px solid var(--line); border-radius:16px;
-  padding:24px; margin-bottom:32px; display:flex; gap:12px;
+  background:var(--card);
+  border:1px solid var(--line);
+  border-radius:16px;
+  padding:24px;
+  margin-bottom:32px;
+  display:flex;
+  gap:12px;
 }
+
 .search-box input{
-  flex:1; padding:12px 16px; border-radius:10px;
-  border:1px solid var(--line); background:#070a14; color:var(--text);
+  flex:1;
+  padding:12px 16px;
+  border-radius:10px;
+  border:1px solid var(--line);
+  background:#070a14;
+  color:var(--text);
 }
+
 .search-box button{
-  padding:12px 20px; border-radius:10px; border:none;
-  font-weight:700; cursor:pointer;
+  padding:12px 20px;
+  border-radius:10px;
+  border:none;
+  font-weight:700;
+  cursor:pointer;
 }
+
 .btn-search{background:var(--accent); color:#000}
 .btn-reset{background:var(--line); color:var(--text)}
-.result-grid{display:grid; grid-template-columns:repeat(2,1fr); gap:20px}
-.card{background:var(--card); border:1px solid var(--line); border-radius:14px; padding:20px}
-.card-header{border-bottom:1px solid var(--line); padding-bottom:12px; margin-bottom:12px}
+
+.result-grid{
+  display:grid;
+  grid-template-columns:repeat(2,1fr);
+  gap:20px
+}
+
+.card{
+  background:var(--card);
+  border:1px solid var(--line);
+  border-radius:14px;
+  padding:20px
+}
+
+.card-header{
+  border-bottom:1px solid var(--line);
+  padding-bottom:12px;
+  margin-bottom:12px
+}
+
 .card-title{color:var(--accent); font-weight:600}
-.info-grid{display:grid; grid-template-columns:1fr 1fr; gap:12px}
-.info-item{background:#070a14; border:1px solid var(--line); border-radius:10px; padding:10px}
+
+.info-grid{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:12px
+}
+
+.info-item{
+  background:#070a14;
+  border:1px solid var(--line);
+  border-radius:10px;
+  padding:10px
+}
+
 .info-label{font-size:12px; color:var(--muted)}
 .info-value{font-size:14px; white-space:normal; line-height:1.4}
-.cert-section{margin-top:12px; padding-top:12px; border-top:1px solid var(--line)}
+
+.cert-section{
+  margin-top:12px;
+  padding-top:12px;
+  border-top:1px solid var(--line)
+}
+
 .cert-btn{
-  display:inline-block; padding:10px 16px;
-  background:var(--accent); color:#000; border-radius:8px;
-  text-decoration:none; font-weight:600;
+  display:inline-block;
+  padding:10px 16px;
+  background:var(--accent);
+  color:#000;
+  border-radius:8px;
+  text-decoration:none;
+  font-weight:600;
 }
+
 .empty{
-  padding:40px; border:2px dashed var(--line);
-  border-radius:12px; text-align:center; color:var(--danger);
+  padding:40px;
+  border:2px dashed var(--line);
+  border-radius:12px;
+  text-align:center;
+  color:var(--danger)
 }
-footer{margin-top:40px; text-align:center; color:var(--muted); font-size:12px}
+
+footer{
+  margin-top:40px;
+  text-align:center;
+  color:var(--muted);
+  font-size:12px
+}
+
+/* 📱 모바일 최적화 */
 @media(max-width:768px){
-  .result-grid{grid-template-columns:1fr}
+  .search-box{
+    flex-direction:column;
+    padding:16px;
+  }
+  .search-box input,
+  .search-box button{
+    width:100%;
+    min-width:0;
+    font-size:15px;
+  }
+  .result-grid{
+    grid-template-columns:1fr;
+    gap:16px;
+  }
+  .info-grid{
+    grid-template-columns:1fr;
+  }
+  .cert-btn{
+    width:100%;
+    text-align:center;
+  }
 }
 </style>
 </head>
@@ -69,10 +162,12 @@ footer{margin-top:40px; text-align:center; color:var(--muted); font-size:12px}
 </section>
 
 <section id="result"></section>
+
 <footer>© SEDNAENG · Serial Number Lookup System</footer>
 </div>
 
 <script>
+/* ===== DB URL ===== */
 const SERIAL_DB_URL =
   "https://ceopark91.github.io/serial-search/serial_db.json";
 const CERT_DB_URL =
@@ -81,6 +176,7 @@ const CERT_DB_URL =
 let SERIAL_DB = {};
 let CERT_DB = {};
 
+/* ===== 시리얼 정규화 ===== */
 function normalizeSerial(raw){
   if(!raw) return "";
   let v = raw.toUpperCase().replace(/\s+/g,"");
@@ -95,6 +191,7 @@ function normalizeSerial(raw){
 
 const nl = t => (t||"").replace(/\n/g,"<br>");
 
+/* ===== DB 로드 ===== */
 async function loadDB(){
   [SERIAL_DB, CERT_DB] = await Promise.all([
     fetch(SERIAL_DB_URL).then(r=>r.json()),
@@ -102,6 +199,7 @@ async function loadDB(){
   ]);
 }
 
+/* ===== 검색 ===== */
 function findSerial(input){
   const key = normalizeSerial(input);
   for(const k in SERIAL_DB){
@@ -116,6 +214,7 @@ function findSerial(input){
   return null;
 }
 
+/* ===== 렌더 ===== */
 function render(hit){
   if(!hit) return `<div class="empty">검색 결과 없음 (No results found)</div>`;
   return `
@@ -142,6 +241,7 @@ function render(hit){
   </div>`;
 }
 
+/* ===== 버튼 ===== */
 async function search(){
   const v = document.getElementById("serialInput").value;
   const box = document.getElementById("result");
@@ -158,6 +258,7 @@ function resetForm(){
   document.getElementById("result").innerHTML="";
 }
 
+/* ===== 초기 ===== */
 window.addEventListener("load", async ()=>{
   await loadDB();
   const p = new URLSearchParams(location.search);
@@ -169,3 +270,5 @@ window.addEventListener("load", async ()=>{
 </script>
 </body>
 </html>
+
+
