--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ footer{
 <div class="wrapper">
 <header>
   <h1>🔍 Serial Number Lookup</h1>
-  <p>Powered by JSON Database · 시리얼 넘버 조회 시스템</p>
+  <p>Powered by SEDNA Database · 시리얼 넘버 조회 시스템</p>
   <div class="status-badge">✓ System Active</div>
 </header>
 
@@ -368,8 +368,8 @@ footer{
 <section id="result"></section>
 
 <footer>
-  © 2025 SEDNAENG · Serial Number Lookup System<br>
-  <small style="opacity:0.7">Made with precision and care</small>
+  © 2025 SEDNAENG Co., Ltd. · All Rights Reserved<br>
+  <small style="opacity:0.7">Serial Number Lookup</small>
 </footer>
 </div>
 
@@ -531,3 +531,4 @@ window.addEventListener("load", async ()=>{
 </script>
 </body>
 </html>
+
